<resources>
    <string name="app_name">Percentage Chart View</string>

    <string name="title">PERCENTAGE CHART VIEW</string>
    <string name="subtitle">v0.3.0 library showcase app</string>

    <array name="home_colors">
        <item>@color/colorAccent</item>
        <item>@color/colorAccent</item>
        <item>@color/colorAccent</item>
        <item>@color/colorCyan</item>
        <item>@color/colorYellow</item>
        <item>@color/colorBlue</item>
    </array>

    <array name="home_titles">
        <item>PIE MODE PLAYGROUND</item>
        <item>RING MODE PLAYGROUND</item>
        <item>FILL MODE PLAYGROUND</item>
        <item>ADAPTIVE COLOR PROVIDER SHOWCASE</item>
        <item>GRADIENT COLORS SHOWCASE</item>
        <item>TEXT FORMATTER SHOWCASE</item>
    </array>

    <array name="home_subtitles">
        <item>Explore pie mode with all its related attributes</item>
        <item>Explore ring mode with all its related attributes</item>
        <item>Explore fill mode with all its related attributes</item>
        <item>See the adaptive color provider in action</item>
        <item>Check the progress gradient colors in action</item>
        <item>Check the text formatter in action</item>
        <item>Check how SpringAnimation differs from the regular animations</item>
    </array>

    <string name="orientation_label">ORIENTATION</string>
    <string name="orientation_clockwise">Clockwise</string>
    <string name="orientation_counter_clockwise">Counter clockwise</string>
    <string name="start_angle_label">START ANGLE</string>
    <string name="progress_lbl">PROGRESS</string>
    <string name="use_animation_lbl">Use animation</string>
    <string name="anim_duration_lbl">ANIM DURATION</string>
    <string name="default_duration">1000 ms by default</string>
    <string name="anim_interpolator_lbl">ANIM INTERPOLATOR</string>
    <string name="default_interpolator">LinearInterpolator by default</string>
    <string name="text_color_lbl">TEXT COLOR</string>
    <string name="default_text_color">WHITE by default</string>
    <string name="text_size_lbl">TEXT SIZE</string>
    <string name="default_text_size">12 sp default</string>
    <string name="text_font_lbl">TEXT FONT</string>
    <string name="text_font_style_lbl">TEXT FONT STYLE</string>
    <string name="text_shadow_lbl">TEXT SHADOW</string>
    <string name="text_shadow_use_shadow_value">Use shadow</string>
    <string name="text_shadow_color_lbl">COLOR</string>
    <string name="text_shadow_radius_lbl">RADIUS</string>
    <string name="text_shadow_distance_x_lbl">DISTANCE X</string>
    <string name="text_shadow_distance_y_lbl">DISTANCE Y</string>
    <string name="draw_background_lbl">DRAW BACKGROUND</string>
    <string name="default_draw_background">By default, true for pie mode and false for ring mode</string>
    <string name="draw_background_value">True</string>
    <string name="background_color_lbl">BACKGROUND COLOR</string>
    <string name="background_color_default">BLACK by default</string>
    <string name="background_offset_lbl">BACKGROUND OFFSET</string>
    <string name="background_offset_info">Applicable only in pie mode and 0 by default</string>
    <string name="progress_color_lbl">PROGRESS COLOR</string>
    <string name="progress_color_default">ACCENT color by default</string>
    <string name="progress_bar_thickness_lbl">PROGRESS BAR THICKNESS</string>
    <string name="progress_bar_thickness_info">Applicable only in ring mode and 16 dp by default</string>
    <string name="progress_bar_style_lbl">PROGRESS BAR STYLE</string>
    <string name="progress_bar_style_round_value">ROUND</string>
    <string name="progress_bar_style_square_value">SQUARE</string>
    <string name="draw_bg_bar_lbl">DRAW BG BAR</string>
    <string name="draw_bg_bar_default">True by default</string>
    <string name="draw_bg_bar_value">True</string>
    <string name="bg_bar_color_lbl">BG BAR COLOR</string>
    <string name="bg_bar_color_default">BLACK by default</string>
    <string name="bg_bar_thickness_lbl">BG BAR THICKNESS</string>
    <string name="bg_bar_thickness_info">Applicable only in ring mode and 16dp by default</string>
    <string name="adaptive_color_provider_lbl">ADAPTIVE COLOR PROVIDER</string>
    <string name="adaptive_color_provider_info">We can get colors to change according to progress value. Here we have 4 colors we can pick and use that are passed to the custom view by providing an AdaptiveColorProvider Class.</string>
    <string name="adaptive_color_provider_value">Use AdaptiveColorProvider</string>
    <string name="adaptive_text_color_lbl">ADAPTIVE TEXT COLOR</string>
    <string name="adaptive_text_color_info">When a provider is used. We can have a progress based adaptive color for the text too. By default, it\'s set to 50% lighter than the progress color. We can tweak the percentage by applying the adaptive text ratio value and the adaptive mode to get a darker/lighter color.</string>
    <string name="adaptive_text_color_value">Use adaptive text color</string>
    <string name="adaptive_text_ratio_lbl">RATIO</string>
    <string name="adaptive_text_mode_lbl">TEXT MODE</string>
    <string name="adaptive_text_mode_darker_value">Darker</string>
    <string name="adaptive_text_mode_lighter_value">Lighter</string>
    <string name="adaptive_background_color_lbl">ADAPTIVE BACKGROUND COLOR</string>
    <string name="adaptive_background_color_info">When a provider is used. We can have a progress based adaptive color for the background too. By default, it\'s set to 50% darker than the progress color. We can tweak the percentage by applying the adaptive background ratio value and the adaptive mode to get a darker/lighter color.</string>
    <string name="adaptive_background_color_value">Use adaptive background color</string>
    <string name="adaptive_background_ratio_lbl">RATIO</string>
    <string name="background_mode_lbl">BG MODE</string>
    <string name="background_mode_darker_value">Darker</string>
    <string name="background_mode_lighter_value">Lighter</string>
    <string name="adaptive_background_bar_color_lbl">ADAPTIVE BACKGROUND BAR COLOR</string>
    <string name="adaptive_background_bar_color_info">When a provider is used. We can have a progress based adaptive color for the background bar too. By default, it\'s set to 50% darker than the progress color. We can tweak the percentage by applying the adaptive background ratio value and the adaptive mode to get a darker/lighter color.</string>
    <string name="adaptive_background_bar_color_value">Use adaptive bg bar color</string>
    <string name="adaptive_background_bar_ratio_lbl">RATIO</string>
    <string name="adaptive_background_bar_mode_lbl">BG BAR MODE</string>
    <string name="adaptive_background_bar_mode_darker_value">Darker</string>
    <string name="adaptive_background_bar_mode_lighter_value">Lighter</string>
    <string name="github_lbl">GitHub URL</string>
    <string name="github_url">https://github.com/RamiJ3mli/PercentageChartView</string>
    <string name="developed_by_lbl">Developed by Rami Jemli</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gradient_label">GRADIENT TYPE</string>
    <string name="gradient_linear">Linear</string>
    <string name="gradient_radial">Radial</string>
    <string name="gradient_sweep">Sweep</string>
    <string name="gradient_angle_label">LINEAR GRADIENT ANGLE</string>
</resources>
